# server/src/controllers/auth.controller.js
@@ -2,6 +2,7 @@ const { User, validateUser, generateToken, validateLogin } = require("../models/
 const { SUCCESS_RESPONSE, ERROR_RESPONSE, CREATED_RESPONSE } = require("../utils/APIResponse");
 const bcrypt = require("bcrypt");
 
+
 //login and generate token,check if the user exists and is only an admin
 
 exports.Login = async (req, res) => {
@@ -13,8 +14,13 @@ exports.Login = async (req, res) => {
 
     let sameUser = await User.findOne({
         $or: [
-            { nationalId: req.body.iDOrPhone },
-            { phone: req.body.iDOrPhone }
+            { nationalId: req.body.iDOrPhoneOrEmail },
+            {
+                phone: req.body.iDOrPhoneOrEmail
+            },
+            {
+                email: req.body.iDOrPhoneOrEmail
+            }
         ]
 
     })
@@ -22,9 +28,9 @@ exports.Login = async (req, res) => {
         return res.status(404).send(ERROR_RESPONSE(null, "User not found", 404));
     }
     //check if the user is an admin
-    if (sameUser.isAdmin !== true) {
-        return res.status(401).send(ERROR_RESPONSE(null, "User is not an admin", 401));
-    }
+    // if (sameUser.isAdmin !== true) {
+    //     return res.status(401).send(ERROR_RESPONSE(null, "User is not NEC", 401));
+    // }
 
     const isMatch = await bcrypt.compare(req.body.password, sameUser.password);
 
@@ -36,18 +42,24 @@ exports.Login = async (req, res) => {
 
 }
 
-
-exports.Register = async (req, res) => {
+exports.VoterRegister = async (req, res) => {
+    console.log("body ", req.body);
     const { error } = validateUser(req.body);
     if (error) return res.status(400).send(ERROR_RESPONSE(error.details[0].message, 400));
     const existingUser = await User.findOne({
         $or: [
             { nationalId: req.body.nationalId },
-            { phone: req.body.phone }
+            {
+                phone: req.body.phone
+
+            },
+            {
+                email: req.body.email
+            }
         ]
     }
     );
-    if (existingUser) return res.status(400).send(ERROR_RESPONSE(`User with national id of ${req.body.nationalId} or phone number of ${req.body.phone} already exists`, 400));
+    if (existingUser) return res.status(400).send(ERROR_RESPONSE(`User with national id of ${req.body.nationalId} or phone number of ${req.body.phone} or email of ${req.body.email} already exists`, 400));
     const salt = await bcrypt.genSalt(10);
     const newPassword = await bcrypt.hash(req.body.password, salt);
 
@@ -58,9 +70,43 @@ exports.Register = async (req, res) => {
         nationalId: req.body.nationalId,
         address: req.body.address,
         password: newPassword,
+        email: req.body.email,
+        isAdmin: false,
+    });
+    await newUser.save();
+    return res.status(201).send(CREATED_RESPONSE(newUser, "Voter created successfully", 201));
+}
+exports.Register = async (req, res) => {
+    const { error } = validateUser(req.body);
+    if (error) return res.status(400).send(ERROR_RESPONSE(error.details[0].message, 400));
+    const existingUser = await User.findOne({
+        $or: [
+            { nationalId: req.body.nationalId },
+            {
+                phone: req.body.phone
+
+            },
+            {
+                email: req.body.email
+            }
+        ]
+    }
+    );
+    if (existingUser) return res.status(400).send(ERROR_RESPONSE(`User with national id of ${req.body.nationalId} or phone number of ${req.body.phone} or email of ${req.body.email} already exists`, 400));
+    const salt = await bcrypt.genSalt(10);
+    const newPassword = await bcrypt.hash(req.body.password, salt);
+
+    const newUser = new User({
+        fname: req.body.fname,
+        lname: req.body.lname,
+        phone: req.body.phone,
+        nationalId: req.body.nationalId,
+        address: req.body.address,
+        password: newPassword,
+        email: req.body.email,
         isAdmin: true,
     });
     await newUser.save();
-    return res.status(201).send(CREATED_RESPONSE(newUser, "User created successfully", 201));
+    return res.status(201).send(CREATED_RESPONSE(newUser, "NEC User created successfully", 201));
 
 }
